Fix for horizontal scrollbar thickness

--- a/src/styles/_scrollbar.scss
+++ b/src/styles/_scrollbar.scss
@@ -5,6 +5,7 @@
 
 .dark-bg::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
     background-color: #101010;
 }
 
@@ -21,6 +22,7 @@
 
     ::-webkit-scrollbar {
         width: 10px;
+        height: 10px;
         background-color: #101010;
     }
 
@@ -37,6 +39,7 @@
 
 .light-bg::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
     background-color: #f5f5f5;
 }
 
@@ -53,6 +56,7 @@
 
     ::-webkit-scrollbar {
         width: 10px;
+        height: 10px;
         background-color: #f5f5f5;
     }
 
